Remove, commit in path register
