# app/Http/Controllers/AuthController.php
@@ -190,7 +190,7 @@ class AuthController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/api/v1/register",
+     *     path="/register",
      *     summary="Realiza o cadastro de Usuarios.",
      *     tags={"Usuario"},
      *     description="Realiza o cadastro de usuarios para acesso ao sistema .",
